написаны тесты на курьерку

--- a/Autotests.WebPages/Autotests.WebPages.csproj
+++ b/Autotests.WebPages/Autotests.WebPages.csproj
@@ -123,13 +123,20 @@
     <Compile Include="Pages\PageAdmin\AdminHomePage.cs" />
     <Compile Include="Pages\PageAdmin\AdminPageBase.cs" />
     <Compile Include="Pages\PageUser\Controls\AlertErrorTextControl.cs" />
+    <Compile Include="Pages\PageUser\Controls\OrdersListControl.cs" />
+    <Compile Include="Pages\PageUser\Controls\OrdersRowControl.cs" />
+    <Compile Include="Pages\PageUser\Controls\RadioButtonListControl.cs" />
     <Compile Include="Pages\PageUser\Controls\ShopsRowControl.cs" />
     <Compile Include="Pages\PageUser\Controls\СalculatorListControl.cs" />
     <Compile Include="Pages\PageUser\Controls\ShopsListControl.cs" />
     <Compile Include="Pages\PageUser\Controls\WarehousesListControl.cs" />
+    <Compile Include="Pages\PageUser\Controls\OrderArticleRowControl.cs" />
     <Compile Include="Pages\PageUser\Controls\СalculatorRowControl.cs" />
     <Compile Include="Pages\PageUser\Controls\WarehousesRowControl.cs" />
     <Compile Include="Pages\PageUser\Controls\TimeWorkRowControl.cs" />
+    <Compile Include="Pages\PageUser\OrdersListPage.cs" />
+    <Compile Include="Pages\PageUser\OrderCourirsPage.cs" />
+    <Compile Include="Pages\PageUser\OrderCreateCourirsPage.cs" />
     <Compile Include="Pages\PageUser\СalculatorPage.cs" />
     <Compile Include="Pages\PageUser\UserWarehouseCreatePage.cs" />
     <Compile Include="Pages\PageUser\UserShopCreatePage.cs" />
