--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -86,13 +86,15 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="T01_StartTests\T03_CreateWarehouseAndShopTest.cs" />
+    <Compile Include="T02_UserTests\OrderCreateCourirsTests.cs" />
     <Compile Include="T03_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartTests\T01_UserRegistrationTest.cs" />
     <Compile Include="T01_StartTests\T02_CompanyRegistrationTest.cs" />
     <Compile Include="T02_UserTests\LoginUserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConstantVariablesTestBase.cs" />
-    <Compile Include="T02_UserTests\CalculatorTest.cs" />
+    <Compile Include="T02_UserTests\CalculatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Autotests.Utilities\Autotests.Utilities.csproj">
