--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -90,6 +90,8 @@
     <Compile Include="T01_StartSettingTests\T04_CreateSizeTests.cs" />
     <Compile Include="T01_StartSettingTests\T05_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T06_CreateWarehouseAndShopTests.cs" />
+    <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
+    <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCreateCourirsTests.cs" />
     <Compile Include="T03_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartSettingTests\T02_UserRegistrationTest.cs" />
