--- a/Autotests.WebPages/Autotests.WebPages.csproj
+++ b/Autotests.WebPages/Autotests.WebPages.csproj
@@ -105,9 +105,9 @@
     <Compile Include="Pages\PageAdmin\Controls\UsersListControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\UsersRowControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\UsersRowSearchControl.cs" />
-    <Compile Include="Pages\PageAdmin\IntervalsSizePage.cs" />
+    <Compile Include="Pages\PageAdmin\IntervalsSidePage.cs" />
     <Compile Include="Pages\PageAdmin\IntervalsWeightPage.cs" />
-    <Compile Include="Pages\PageAdmin\IntervalSizeCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\IntervalSideCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\PricesCourierPage.cs" />
     <Compile Include="Pages\PageAdmin\PricesPickupPage.cs" />
     <Compile Include="Pages\PageAdmin\UsersShopsPage.cs" />
