--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="T01_StartSettingTests\T06_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
+    <Compile Include="T02_UserTests\OrderCreateCourirsValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCreateCourirsTests.cs" />
     <Compile Include="T03_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartSettingTests\T02_UserRegistrationTest.cs" />
