--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -79,6 +79,10 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="WebDriver, Version=2.39.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Assemblies\WebDriver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -87,16 +91,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="T01_StartSettingTests\T01_CreateLegalEntityTest.cs" />
-    <Compile Include="T01_StartSettingTests\T04_CreateSizeTests.cs" />
-    <Compile Include="T01_StartSettingTests\T05_CreatePriceTests.cs" />
-    <Compile Include="T01_StartSettingTests\T06_CreateWarehouseAndShopTests.cs" />
+    <Compile Include="T01_StartSettingTests\T03_CreateSizeTests.cs" />
+    <Compile Include="T01_StartSettingTests\T04_CreateCompanyTests.cs" />
+    <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
+    <Compile Include="T01_StartSettingTests\T07_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
-    <Compile Include="T02_UserTests\OrderCreateCourirsValidationTests.cs" />
-    <Compile Include="T02_UserTests\OrderCreateCourirsTests.cs" />
+    <Compile Include="T02_UserTests\OrderSelfCreateDraftTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsCreateSendTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsValidationTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsCreateDraftTests.cs" />
     <Compile Include="T03_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartSettingTests\T02_UserRegistrationTest.cs" />
-    <Compile Include="T01_StartSettingTests\T03_CompanyRegistrationTests.cs" />
+    <Compile Include="T01_StartSettingTests\T05_CreateDeliveryPointTests.cs" />
     <Compile Include="T02_UserTests\LoginUserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConstVariablesTestBase.cs" />
