--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="T01_StartSettingTests\T07_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsCkeckSizeCountedTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfCreateSendTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfCreateDraftTests.cs" />
