--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,6 +97,8 @@
     <Compile Include="T01_StartSettingTests\T07_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
+    <Compile Include="T02_UserTests\OrdeSelfEditingTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsEditingTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfCkeckSizeCountedTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCkeckSizeCountedTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCheckСountedAndIndexTests.cs" />
