--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -98,8 +98,8 @@
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsEditingValidationTests.cs" />
-    <Compile Include="T02_UserTests\OrdeSelfEditingValidationTests.cs" />
-    <Compile Include="T02_UserTests\OrdeSelfEditingTests.cs" />
+    <Compile Include="T02_UserTests\OrderSelfEditingValidationTests.cs" />
+    <Compile Include="T02_UserTests\OrderSelfEditingTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsEditingTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfCkeckSizeCountedTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCkeckSizeCountedTests.cs" />
