--- a/Autotests.WebPages/Autotests.WebPages.csproj
+++ b/Autotests.WebPages/Autotests.WebPages.csproj
@@ -126,6 +126,8 @@
     <Compile Include="Pages\PageAdmin\DeliveryPointsPage.cs" />
     <Compile Include="Pages\PageAdmin\DeliveryPointCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\IntervalWeightCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\PaymentPricePage.cs" />
+    <Compile Include="Pages\PageAdmin\PaymentPriceCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\СompanyCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\СompaniesPage.cs" />
     <Compile Include="Pages\PageAdmin\AdminHomePage.cs" />
