--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -110,10 +110,13 @@
     <Compile Include="T02_UserTests\OrderCourirsCreateSendTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCreateDraftTests.cs" />
+    <Compile Include="T02_UserTests\ShopTests.cs" />
+    <Compile Include="T02_UserTests\WarehouseDocumentsShowTests.cs" />
+    <Compile Include="T02_UserTests\WarehouseEditingTests.cs" />
+    <Compile Include="T02_UserTests\WarehouseValidationTests.cs" />
     <Compile Include="T03_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartSettingTests\T02_UserRegistrationTest.cs" />
     <Compile Include="T01_StartSettingTests\T05_CreateDeliveryPointTests.cs" />
-    <Compile Include="T02_UserTests\LoginUserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConstVariablesTestBase.cs" />
     <Compile Include="T02_UserTests\CalculatorTests.cs" />
