--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -115,6 +115,8 @@
     <Compile Include="T02_UserTests\WarehouseEditingTests.cs" />
     <Compile Include="T02_UserTests\WarehouseValidationTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPriceCourirsTests.cs" />
+    <Compile Include="T03_ApiTests\OrderCourirsCreateTests.cs" />
+    <Compile Include="T03_ApiTests\OrderSelfErrorTests.cs" />
     <Compile Include="T03_ApiTests\OrderSelfCreateAndSendTests.cs" />
     <Compile Include="T03_ApiTests\CheckApiKeyTestsTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPriceSelfTests.cs" />
