--- a/Autotests.WebPages/Autotests.WebPages.csproj
+++ b/Autotests.WebPages/Autotests.WebPages.csproj
@@ -102,6 +102,14 @@
     <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Pages\BaseRowControl.cs" />
     <Compile Include="Pages\PageAdmin\AdminMaintenancePage.cs" />
+    <Compile Include="Pages\PageAdmin\PickupTimetableCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\PickupTimetablePage.cs" />
+    <Compile Include="Pages\PageAdmin\OrderOutputEditingPage.cs" />
+    <Compile Include="Pages\PageAdmin\OrdersOutputPage.cs" />
+    <Compile Include="Pages\PageAdmin\Controls\OrdersInputRowControl.cs" />
+    <Compile Include="Pages\PageAdmin\Controls\OrdersInputListControl.cs" />
+    <Compile Include="Pages\PageAdmin\Controls\CompaniesListControl.cs" />
+    <Compile Include="Pages\PageAdmin\Controls\CompaniesRowControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\ShopRowControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\ShopsListControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\PricesListControl.cs" />
@@ -111,12 +119,21 @@
     <Compile Include="Pages\PageAdmin\Controls\UsersListControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\UsersRowControl.cs" />
     <Compile Include="Pages\PageAdmin\Controls\UsersRowSearchControl.cs" />
+    <Compile Include="Pages\PageAdmin\CalendarsPage.cs" />
+    <Compile Include="Pages\PageAdmin\CalendarCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\OrderInputEditingPage.cs" />
+    <Compile Include="Pages\PageAdmin\OrdersInputPage.cs" />
+    <Compile Include="Pages\PageAdmin\TimeCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\TimePickupCreatePage.cs" />
+    <Compile Include="Pages\PageAdmin\TimesPage.cs" />
+    <Compile Include="Pages\PageAdmin\TimesPickupPage.cs" />
     <Compile Include="Pages\PageAdmin\ShopsPage.cs" />
     <Compile Include="Pages\PageAdmin\IntervalsSidePage.cs" />
     <Compile Include="Pages\PageAdmin\IntervalsWeightPage.cs" />
     <Compile Include="Pages\PageAdmin\IntervalSideCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\PricesCourierPage.cs" />
     <Compile Include="Pages\PageAdmin\PricesPickupPage.cs" />
+    <Compile Include="Pages\PageAdmin\UserAdminShopCreatePage.cs" />
     <Compile Include="Pages\PageAdmin\UsersShopsPage.cs" />
     <Compile Include="Pages\PageAdmin\UsersWarehousesPage.cs" />
     <Compile Include="Pages\PageAdmin\PricesSelfPage.cs" />
