--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -115,7 +115,7 @@
     <Compile Include="T02_UserTests\OrderCourirsCreateSendTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCreateDraftTests.cs" />
-    <Compile Include="T02_UserTests\ShopTests.cs" />
+    <Compile Include="T02_UserTests\ShopCreateTests.cs" />
     <Compile Include="T02_UserTests\WarehouseDocumentsShowTests.cs" />
     <Compile Include="T02_UserTests\WarehouseEditingTests.cs" />
     <Compile Include="T02_UserTests\WarehouseValidationTests.cs" />
