--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,8 +97,9 @@
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
-    <Compile Include="T04_AdminTests\DateTransferCDCkeckInputOutputTests.cs" />
-    <Compile Include="T04_AdminTests\AdminBasePage.cs" />
+    <Compile Include="T04_AdminTests\DateTransferCDCkeckOutOrderTests.cs" />
+    <Compile Include="T04_AdminTests\SendOrdersBasePage.cs" />
+    <Compile Include="T04_AdminTests\PickupAndProcessDatesCountTests.cs" />
     <Compile Include="T04_AdminTests\DateTransferCDDriverTests.cs" />
     <Compile Include="T04_AdminTests\DateTransferCDCountTests.cs" />
     <Compile Include="T02_UserTests\CalculatorValidationTests.cs" />
@@ -115,7 +116,7 @@
     <Compile Include="T02_UserTests\OrderCourirsCreateSendTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsValidationTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsCreateDraftTests.cs" />
-    <Compile Include="T02_UserTests\ShopCreateTests.cs" />
+    <Compile Include="T02_UserTests\ShopCreateAndEditingTests.cs" />
     <Compile Include="T02_UserTests\WarehouseDocumentsShowTests.cs" />
     <Compile Include="T02_UserTests\WarehouseEditingTests.cs" />
     <Compile Include="T02_UserTests\WarehouseValidationTests.cs" />
