--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,8 +97,18 @@
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
+    <Compile Include="T03_ApiTests\OrderCourirsErrorTests.cs" />
+    <Compile Include="T03_ApiTests\PaymentPriceTests.cs" />
+    <Compile Include="T03_ApiTests\DeliveryPointsTests.cs" />
     <Compile Include="T03_ApiTests\CompanyTermTests.cs" />
+    <Compile Include="T03_ApiTests\DocumentsRequestAndStatusTests.cs" />
+    <Compile Include="T03_ApiTests\OrderEditingTests.cs" />
+    <Compile Include="T03_ApiTests\OrderNotFoundTests.cs" />
     <Compile Include="T03_ApiTests\OrderStatusDatePredictTests.cs" />
+    <Compile Include="T03_ApiTests\WarehouseAdminEditTests.cs" />
+    <Compile Include="T03_ApiTests\WarehouseAdminInfoTests.cs" />
+    <Compile Include="T03_ApiTests\WarehouseAdminCreateTests.cs" />
+    <Compile Include="T03_ApiTests\ShopAdminCreateAndInfoAndEditTests.cs" />
     <Compile Include="T04_AdminTests\DateTransferCDCkeckOutOrderTests.cs" />
     <Compile Include="T04_AdminTests\SendOrdersBasePage.cs" />
     <Compile Include="T04_AdminTests\PickupAndProcessDatesCountTests.cs" />
@@ -124,11 +134,9 @@
     <Compile Include="T02_UserTests\WarehouseValidationTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPriceCourirsTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPickupDateTests.cs" />
-    <Compile Include="T03_ApiTests\OrderCourirsErrorTests.cs" />
     <Compile Include="T03_ApiTests\OrderCourirsCreateTests.cs" />
     <Compile Include="T03_ApiTests\OrderSelfErrorTests.cs" />
     <Compile Include="T03_ApiTests\OrderSelfCreateAndSendTests.cs" />
-    <Compile Include="T03_ApiTests\CheckApiKeyTestsTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPriceSelfTests.cs" />
     <Compile Include="T03_ApiTests\ShopCreateTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseCreateTests.cs" />
