--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -98,6 +98,8 @@
     <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T03_ApiTests\OrderCourirsErrorTests.cs" />
+    <Compile Include="T03_ApiTests\PaymentPriceFeeTests.cs" />
+    <Compile Include="T03_ApiTests\DaemonTests.cs" />
     <Compile Include="T03_ApiTests\PaymentPriceTests.cs" />
     <Compile Include="T03_ApiTests\DeliveryPointsTests.cs" />
     <Compile Include="T03_ApiTests\CompanyTermTests.cs" />
