--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
+    <Compile Include="T03_ApiTests\OrderStatusFullTests.cs" />
     <Compile Include="T03_ApiTests\PickupShopsReturnTests.cs" />
     <Compile Include="T03_ApiTests\PickupShopsTests.cs" />
     <Compile Include="T03_ApiTests\PickupOrdersTests.cs" />
@@ -115,7 +116,7 @@
     <Compile Include="T03_ApiTests\OrderEditingTests.cs" />
     <Compile Include="T03_ApiTests\OrderNotFoundTests.cs" />
     <Compile Include="T03_ApiTests\OrderStatusDatePredictTests.cs" />
-    <Compile Include="T03_ApiTests\WarehouseAdminEditTests.cs" />
+    <Compile Include="T03_ApiTests\WarehouseEditTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseAdminInfoTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseAdminCreateTests.cs" />
     <Compile Include="T03_ApiTests\ShopAdminCreateAndInfoAndEditTests.cs" />
