--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -97,6 +97,8 @@
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
+    <Compile Include="T03_ApiTests\ShopDeliveryCompanyTests.cs" />
+    <Compile Include="T03_ApiTests\ShopPickupCompanyTests.cs" />
     <Compile Include="T03_ApiTests\OrderStatusFullTests.cs" />
     <Compile Include="T03_ApiTests\PickupShopsReturnTests.cs" />
     <Compile Include="T03_ApiTests\PickupShopsTests.cs" />
@@ -147,7 +149,7 @@
     <Compile Include="T03_ApiTests\CalculatorPickupDateTests.cs" />
     <Compile Include="T03_ApiTests\OrderCourirsCreateTests.cs" />
     <Compile Include="T03_ApiTests\OrderSelfErrorTests.cs" />
-    <Compile Include="T03_ApiTests\OrderSelfCreateAndSendAndCancelTests.cs" />
+    <Compile Include="T03_ApiTests\OrderSelfCreateAndSendAndCanceAndInfoTests.cs" />
     <Compile Include="T03_ApiTests\CalculatorPriceSelfTests.cs" />
     <Compile Include="T03_ApiTests\ShopCreateTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseCreateTests.cs" />
