--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -93,9 +93,11 @@
     <Compile Include="T01_StartSettingTests\T01_CreateLegalEntityTest.cs" />
     <Compile Include="T01_StartSettingTests\T03_CreateSizeTests.cs" />
     <Compile Include="T01_StartSettingTests\T04_CreateCompanyTests.cs" />
+    <Compile Include="T01_StartSettingTests\T09_CreateOrderedIttemplatesTests.cs" />
+    <Compile Include="T01_StartSettingTests\T08_CreateMarginsTests.cs" />
     <Compile Include="T01_StartSettingTests\T07_CreateTimesTests.cs" />
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
-    <Compile Include="T01_StartSettingTests\T08_CreateWarehouseAndShopTests.cs" />
+    <Compile Include="T01_StartSettingTests\T10_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T03_ApiTests\ShopDeliveryCompanyTests.cs" />
     <Compile Include="T03_ApiTests\ShopPickupCompanyTests.cs" />
