тесты на проверку количество закав тест на проверку сервис деско тест на проверку алертов при отмене заказов

--- a/Autotests.WebPages/Autotests.WebPages.csproj
+++ b/Autotests.WebPages/Autotests.WebPages.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Pages\ComboboxControl.cs" />
     <Compile Include="Pages\DefaultPage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
+    <Compile Include="Pages\PageFreshDesk\SupportTicketsListControl.cs" />
+    <Compile Include="Pages\PageFreshDesk\SupportTicketOpenPage.cs" />
+    <Compile Include="Pages\PageFreshDesk\SupportTicketsRowControl.cs" />
     <Compile Include="Pages\PageFreshDesk\SupportTicketsPage.cs" />
     <Compile Include="Pages\PageFreshDesk\SupportFreshDeskPage.cs" />
     <Compile Include="Pages\PageAdmin\СalculatorPage.cs" />
