--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="T01_StartSettingTests\T06_CreatePriceTests.cs" />
     <Compile Include="T01_StartSettingTests\T10_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
+    <Compile Include="T02_UserTests\OrderCancelTests.cs" />
     <Compile Include="T03_ApiTests\OrderEditingSendTests.cs" />
     <Compile Include="T03_ApiTests\ShopDeliveryCompanyTests.cs" />
     <Compile Include="T03_ApiTests\ShopPickupCompanyTests.cs" />
@@ -125,7 +126,7 @@
     <Compile Include="T03_ApiTests\UserWarehouseEditTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseInfoTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseCreateTests.cs" />
-    <Compile Include="T03_ApiTests\ShopCreateAndInfoAndEditTests.cs" />
+    <Compile Include="T03_ApiTests\ShopInfoAndEditTests.cs" />
     <Compile Include="T04_AdminTests\DateTransferCDCkeckOutOrderTests.cs" />
     <Compile Include="T04_AdminTests\ClickAllAdminPagesTests.cs" />
     <Compile Include="T04_AdminTests\SendOrdersBasePage.cs" />
@@ -158,6 +159,8 @@
     <Compile Include="T03_ApiTests\CalculatorPriceSelfTests.cs" />
     <Compile Include="T03_ApiTests\UserCreateShopTests.cs" />
     <Compile Include="T03_ApiTests\UserWarehouseCreateTests.cs" />
+    <Compile Include="T04_SupportFreshDeskTests\SupportEditingSendCourirsTests.cs" />
+    <Compile Include="T04_SupportFreshDeskTests\SupportEditingSendSelfTests.cs" />
     <Compile Include="T04_SupportFreshDeskTests\SupportCancelTests.cs" />
     <Compile Include="T05_ClearTests\ClearTest.cs" />
     <Compile Include="T01_StartSettingTests\T02_UserRegistrationTest.cs" />
